--- a/cloudformation_template.yml
+++ b/cloudformation_template.yml
@@ -70,6 +70,14 @@ Parameters:
     Default: 0.0.0.0/0
     AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
     ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
+  RDSACCESSLocation:
+    Description: The IP address range that can be used in Subnet
+    Type: String
+    MinLength: '9'
+    MaxLength: '18'
+    Default: 0.0.0.0/0
+    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
+    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
   WebServerCapacity:
     Default: '2'
     Description: The initial number of WebServer instances
@@ -624,6 +632,7 @@ Resources:
   WebServerSecurityGroup:
     Type: 'AWS::EC2::SecurityGroup'
     Properties:
+      GroupName: WebServerSecurityGroup
       GroupDescription: >-
         Enable HTTP access via port 80 locked down to the load balancer + SSH
         access
@@ -817,6 +826,16 @@ Resources:
       SubnetIds: 
         - !Ref BGPUBLICSubnet1
         - !Ref BGPUBLICSubnet2
+  DBEC2SecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: Open database for ec2 access
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: '3306'
+          ToPort: '3306'
+          CidrIp: !Ref RDSACCESSLocation
+      VpcId: !Ref BGVPC
 
   BGDB:
     Type: AWS::RDS::DBInstance
@@ -825,6 +844,8 @@ Resources:
       AllocatedStorage: '5'
       DBInstanceClass: db.t2.micro
       Engine: MySQL
+      VPCSecurityGroups: 
+        - !GetAtt DBEC2SecurityGroup.GroupId
       DBSubnetGroupName: !Ref BGDBSubnetGroup
       MasterUsername: !Ref 'DBUser'
       MasterUserPassword: !Ref 'DBPassword'
